--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,45 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  nominatim:
-    image: mediagis/nominatim:4.1
-    restart: unless-stopped
-    ports:
-      - "8080:8080"
-    environment:
-      PBF: /data/yemen-latest.osm.pbf
-      THREADS: 4
-      POSTGRES_PASSWORD: "${NOMINATIM_DB_PASS}"
-    volumes:
-      - ./graphhopper-data:/data:ro
-      - nominatim_db:/var/lib/postgresql/12/main
-
-  tileserver:
-    image: overv/openstreetmap-tile-server:latest
-    restart: unless-stopped
-    ports:
-      - "80:80"
-    environment:
-      UPDATES: "false"
-    volumes:
-      - ./graphhopper-data:/var/lib/postgresql/12/main:ro
-      - tileserver_db:/var/lib/postgresql/12/main/data
-
   graphhopper:
-    build:
-      context: .
-      dockerfile: Dockerfile.graphhopper
+    image: mouhamedtec/graphhopper:latest
+    container_name: graphhopper
     restart: unless-stopped
     ports:
       - "8989:8989"
     volumes:
-      - ./graphhopper-data:/opt/graphhopper/data:ro
+      - ./graphhopper-data:/data
+    environment:
+      - JAVA_OPTS=-Xmx2g
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.graphhopper.rule=Host(`graphhopper.hayataxi.online`)
+      - traefik.http.routers.graphhopper.entrypoints=websecure
+      - traefik.http.routers.graphhopper.tls=true
 
-volumes:
-  nominatim_db:
-  tileserver_db:
+  nominatim:
+    image: mediagis/nominatim:4.1
+    container_name: nominatim
+    restart: unless-stopped
+    volumes:
+      - ./nominatim-data:/data
+    environment:
+      - POSTGRES_PASSWORD=nominatim
+      - PBF=/data/yemen-latest.osm.pbf
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.nominatim.rule=Host(`nominatim.hayataxi.online`)
+      - traefik.http.routers.nominatim.entrypoints=websecure
+      - traefik.http.routers.nominatim.tls=true
+
+  tileserver:
+    image: overv/openstreetmap-tile-server
+    container_name: tileserver
+    restart: unless-stopped
+    ports:
+      - "80"  # remove if you got port conflict
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.tiles.rule=Host(`tiles.hayataxi.online`)
+      - traefik.http.routers.tiles.entrypoints=websecure
+      - traefik.http.routers.tiles.tls=true
